--- a/_data/home.yml
+++ b/_data/home.yml
@@ -54,14 +54,14 @@ old_project_entries:
     desc: The better people know you, the better they collaborate
 
 footer_entries:
-  - title: abhinav's homepage
-    url: https://www.abhinav.co
+  - title: Baekjoon handle
+    url: https://solved.ac/profile/geenieyoon
 
-  - title: twitter
-    url: https://twitter.com/abhinav
+  - title: Instagram
+    url: https://www.instagram.com/yoon.jeewon
 
-  - title: github
-    url: https://github.com/abhinavs
+  - title: LinkedIn
+    url: https://www.linkedin.com/in/jeewon-yoon-91b489302/
 
   - title: feed
     url: feed.xml
