--- a/_data/home.yml
+++ b/_data/home.yml
@@ -11,19 +11,22 @@ navbar_entries:
 project_entries:
   - title: Ac.T(관광데이터 공모전)
     url: overview-post
-    desc: This is an example project, configured in _data/home.yml
+    desc:
+    #This is an example project, configured in _data/home.yml
 
-  - title: Project 2
+  - title: gen-AI to image generation project
     url: overview-post
     desc: Projects are shown in card layout
 
-  - title: Project 3
+  - title: Web project-Stattracker
     url: overview-post
-    desc: You can control visibility from _config.yml file
+    desc: 대학생들의 능력 스탯을 시각적으로 보여줄 수 있는 간단한 웹사이트입니다.
+    #You can control visibility from _config.yml file
 
-  - title: Project 4
+  - title: Web App-EduTools
     url: overview-post
-    desc: This project uses highlight markup, configured in _data/home.yml
+    desc: Node.js 와 react를 활용한 웹앱입니다. 어린 아이들을 돌보는 교사들과, 제작자들을 위한 거래 관리 플랫폼.
+    #This project uses highlight markup, configured in _data/home.yml
     highlight: WIP
 
   - title: Project 5
@@ -36,7 +39,7 @@ project_entries:
     desc: It also has a scalable vertical list (in case you need it)
 
 old_project_entries:
-  - title: Soopr
+  - title: Algorithm Study
     url: https://www.soopr.co
     desc: Delight your readers - add beautiful share and like buttons easily to your websites
     highlight: NEW
