논문 카드 형식 추가

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Rosaze
+title: 윤지원의 기술 블로그
 author: Jeewon Yoon
 url: https://rosaze.github.io/ # root address of the site
 description: > # description of the site (multiple lines allowed)
