--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: 윤지원의 기술 블로그
 author: Jeewon Yoon
 url: https://rosaze.github.io/ # root address of the site
-description: > # description of the site (multiple lines allowed)
+description: | # description of the site (multiple lines allowed)
   Moonwalk is a fast and elegant Jekyll theme with a clean dark mode. It comes with horizontal list (for navbar and footer), card list (for portfolio), and a generic vertical list. It is very easy to modify in case you want to build over it - please see _layouts/home.html to do that.
 
 permalink: /:slug
