feat: 핸즈온 머신러닝 스터디 기록 추가 - 1.4~1.6

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -73,6 +73,11 @@ research_entries:
     url: /categories/prompt-engineering
     desc: Collection of Prompt Engineering & gen AI
 
+  - title: 핸즈온 머신러닝
+    url: /categories/dacos-study
+    desc: Study records of Dacos
+    highlight: DACOS
+
 misc_entries:
   - title: this is an example vertical list
     url: false
