feat: Spring MVC 1주차 스터디 기록 추가 및 관련 카테고리 업데이트

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -78,6 +78,11 @@ research_entries:
     desc: Study records of Dacos
     highlight: DACOS
 
+  - title: Spring MVC study
+    url: /categories/spring-study
+    desc: Study records of spring
+    highlight: APPS
+
 misc_entries:
   - title: this is an example vertical list
     url: false
