--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ theme_config:
   show_projects: true # show projects as cards, add in _data/home.yml
   show_blog: true # show blog posts added in _posts
   show_old_projects: true # show old projects as cards, add in _data/home.yml
+  show_tech_study: true # 새로 추가
   show_misc_list: false # show generic vertical list for misc details, add _data/home.yml
   show_reading_time: true # show number of words and reading time in the blog posts
   show_tags: true # show tags in a blog posts
@@ -36,7 +37,8 @@ theme_config:
     title_projects: Projects
     title_misc_list: Details
     title_blog: Activity Blog
-    title_old_projects: Tech Study & Others
+    title_old_projects: Old Projects
+    title_tech_study: Tech Study & Research
 
 soopr:
   publish_token: "" # sign up at https://www.soopr.co to get your publish token and personalize share and reaction options
